add generator
